--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.2",
+    "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.1",
     "axios": "0.24.0",
@@ -18,6 +19,7 @@
     "expo-app-loading": "~1.3.0",
     "expo-font": "~10.0.4",
     "expo-image-picker": "~12.0.1",
+    "expo-linear-gradient": "~11.0.3",
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
@@ -26,9 +28,7 @@
     "react-native-screens": "~3.10.1",
     "react-native-svg": "12.1.1",
     "react-native-svg-uri": "^1.2.3",
-    "react-native-web": "0.17.1",
-    "@react-native-async-storage/async-storage": "~1.15.0",
-    "expo-linear-gradient": "~11.0.3"
+    "react-native-web": "0.17.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
